class Agencia:
    
    def __init__(self, numero_ag, telefone, endereco):
        self.numero_ag = numero_ag
        self.telefone = telefone
        self.endereco = endereco