class ContaCorrente:
    
    def __init__(self, numero_cc, saldo, agencia, pessoa):
        self._numero_cc = numero_cc
        self._saldo = saldo
        self._agencia = agencia
        self._pessoa = pessoa